--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "BERT NLP sentiment analysis"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "ipywidgets",
+    "jupyter",
     "gensim",
     "nltk",
     "PyPDF2",
